feat: add payments microservice

--- a/eventHub-payments/src/main/resources/application.properties
+++ b/eventHub-payments/src/main/resources/application.properties
@@ -1,4 +1,12 @@
+server.port=15001
+spring.application.name=EventHub-Payments
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.port=${RABBITMQ_PORT}
-spring.rabbitmq.username=${RABBITMQ_USERNAME}
+spring.rabbitmq.username=${RABBITMQ_USER}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/eventhub-payments}
+mq.exchange.name=eventhub.exchange
+mq.queue.input=eventhub.payment.created
+mq.queue.output=eventhub.payment.processed
+mq.routing.key.input=payment.created
+mq.routing.key.output=payment.processed
