--- a/eventHub-payments/src/main/resources/application.properties
+++ b/eventHub-payments/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port=15001
+server.port=${PAYMENTS_SERVER_PORT}
 spring.application.name=EventHub-Payments
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.port=${RABBITMQ_PORT}
 spring.rabbitmq.username=${RABBITMQ_USER}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/eventhub-payments}
-mq.exchange.name=eventhub.exchange
-mq.queue.input=eventhub.payment.created
-mq.queue.output=eventhub.payment.processed
-mq.routing.key.input=payment.created
-mq.routing.key.output=payment.processed
+mq.exchange.name=${MQ_EXCHANGE_NAME:eventhub.exchange}
+mq.queue.input=${MQ_QUEUE_INPUT:eventhub.payment.created}
+mq.queue.output=${MQ_QUEUE_OUTPUT:eventhub.payment.processed}
+mq.routing.key.input=${MQ_ROUTING_KEY_INPUT:payment.created}
+mq.routing.key.output=${MQ_ROUTING_KEY_OUTPUT:payment.processed}
