--- a/eventhub-api/src/main/resources/application.properties
+++ b/eventhub-api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
-server.port=${SERVER_PORT}
+server.port=${API_SERVER_PORT}
 api.secret.security.secret=${JWT_SECRET}
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.port=${RABBITMQ_PORT}
