--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <modules>
         <module>eventhub-api</module>
-        <module>eventhub-payments</module>
+        <module>eventHub-payments</module>
     </modules>
 
     <properties>
@@ -56,6 +56,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
             </plugin>
         </plugins>
     </build>
