--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
           username: root
           key: ${{ secrets.VPS_SSH_KEY }}
           source: "docker-compose.yml"
-          target: "/root/eventhub"
+          target: "/root/eventhubv2"
           overwrite: true
 
       - name: Deploy to VPS via SSH
