--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
           username: root
           key: ${{ secrets.VPS_SSH_KEY }}
           source: "docker-compose.yml"
-          target: "/root/eventhubv2"
+          target: "/root/eventhub-v2"
           overwrite: true
 
       - name: Deploy to VPS via SSH
@@ -62,7 +62,8 @@ jobs:
           username: root
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            cd /root/eventhubv2
+            mkdir -p /root/eventhub-v2
+            cd /root/eventhub-v2
             
             # Create .env file with all secrets
             echo "API_PORT=${{ secrets.API_PORT }}" > .env
